added my project on module-1 and module-2

--- a/index.html
+++ b/index.html
@@ -3,9 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web</title>
+    <title>Introduce My Self</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus debitis laudantium itaque tempora odio natus quisquam qui modi perferendis at.</p>
+   <h1>Introduce Myself</h1>
+   <div class="am">
+    <h2>About Me :</h2>
+    <p>
+        I'm Parvez Hasan, currently pursuing a Bachelor of Science (BSc) in Computer Science and Engineering (CSE) at Chittagong University of Engineering and Technology (CUET), batch CSE'23. I completed my HSC from Thakurgaon Government College (TGC-23) and SSC from Lahiri M.L. High School (LMHS-21), where I also passed JSC in 2018. I previously studied at Charol High School during classes 6 and 7. Originally from Thakurgaon, Rajshahi Division, I now live in Chittagong for my studies. My father is a dedicated teacher, and my mother is a homemaker. I'm passionate about learning and growing in the field of technology.
+    </p>
+   </div>
+   <div class="tab">
+    <h2>Academic Result : </h2>
+    <table border="1">
+      <tr>
+        <th>Exam</th>
+        <th>Institution</th>
+        <th>GPA</th>
+        <th>Year</th>
+        <th>Board</th>
+      </tr>
+      <tr>
+        <td>PSC</td>
+        <td>Kacari Para Sikhon School</td>
+        <td>5.00</td>
+        <td>2015</td>
+        <td>Dinajpur</td>
+      </tr>
+       <tr>
+   <td>JSC</td>
+   <td>Lahir Multi-Lateral High School</td>
+   <td>5.00</td>
+   <td>2018</td>
+   <td>Dinajpur</td>
+ </tr>
+        <tr>
+   <td>SSC</td>
+   <td>Lahir Multi-Lateral High School</td>
+   <td>5.00</td>
+   <td>2021</td>
+   <td>Dinajpur</td>
+ </tr>
+        <tr>
+   <td>HSC</td>
+   <td>Thakurgaon Goverment College</td>
+   <td>5.00</td>
+   <td>2023</td>
+   <td>Dinajpur</td>
+ </tr>
+    </table>
+   </div>
+   <img src="789.jpg" alt="Parvez" height="300px" width="300px">
+   <div class="list">
+    <h2>My Hobies</h2>
+    <ul>
+        <li>My Wife</li>
+        <li>Eating</li>
+        <li>Playing Racket</li>
+        <li>Music</li>
+    </ul>
+   </div>
+   <a href="https://www.programming-hero.com/" target="_blank">Favo_Web</a>
+   <div class="form">
+     <form>
+        <fieldset>
+    <legend>Contact</legend>
+       <label for="name" >Name:</label>
+            <input type="text" id="name">
+            <label for="gender">Gender :</label>
+            <input type="radio" name="male" id="male">
+            <label for="male">Male</label>
+            <input type="radio" name="Female" id="Female">
+            <label for="Female">Female</label>
+            <input type="radio" name="Custom" id="Custom">
+            <label for="Custom">Custom</label><br>
+             <label for="email">Email:</label>
+ <input type="email" 
+name="email" id="email">
+            <caption>Skills : </caption>
+             
+             <input type="checkbox" name="webdev" id="webdev">
+             <label for="webdev">Web Development</label>
+              <input type="checkbox" name="mobiledev" id="mobiledev">
+              <label for="mobiledev">Mobile Development</label>
+               <input type="checkbox" name="appdev" id="appdev">
+               <label for="appdev">App Development</label><br>
+               <caption>Comments</caption>
+               <textarea name="coment" id="coment" placeholder="Write Here your comment...."></textarea><br>
+               <button type="submit">Submit</button>
+            </fieldset>
+        </form>
+    
+   </div>
 </body>
 </html>
