added my first interface

--- a/Apna College/index.html
+++ b/Apna College/index.html
@@ -77,7 +77,7 @@ vero. Necessitatibus, quaerat excepturi cumque sequi temporibus ratione non labo
 facere velit praesentium adipisci reiciendis repellat illum atque, cumque aliquam corrupti, 
 temporibus culpa? Error perferendis, illum quos possimus amet eligendi tempora aut iusto nostrum! 
 Distinctio, quae nihil! Iste iure dolor asperiores! Consequatur iste ipsa eum eos sint 
-reprehenderit facere iure, voluptatem cumque. Vero corporis a asperiores atque expedita. In 
+reprehenderit facere iure, voluptatem cumque. Vero corporis a asperiores atque expedita. <br>In 
 doloremque, ducimus vero suscipit blanditiis eaque et est quae sapiente dolore consequuntur, at 
 cum. Adipisci, quidem nostrum ex pariatur molestias aspernatur laudantium veritatis dolor nisi 
 deleniti ut, magni sit culpa. Quasi, earum ipsum optio ex sed temporibus repudiandae quas 
